.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/nested_enum_utils-0.2.3/tests/compile_fail/nested_duplicate_type.rs
use nested_enum_utils::enum_conversions;

#[derive(Debug)]
#[enum_conversions(Outer)]
enum Inner1 {
    A(u32),
    B(u8),
}

#[derive(Debug)]
#[enum_conversions(Outer)]
enum Inner2 {
    A(u32),
    B(u8),
}

#[derive(Debug)]
#[enum_conversions]
enum Outer {
    A(Inner1),
    B(Inner2),
}

fn main() {}
